--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -1,19 +1,24 @@
 $green: #16DDA4;
 
 #long-button {
-  background-color:$green;
   display:inline-block;
+  background-color: $green;
   cursor:pointer;
   color:#ffffff;
   font-family:Arial;
-  font-size:17px;
-  padding:6px 76px;
+  font-size: modular-scale(0);
+  padding:8px 84px;
   text-decoration:none;
+  border: none;
 }
-.long-button:hover {
-  background-color:#5cbf2a;
-}
-.long-button:active {
-  position:relative;
-  top:1px;
+#short-button {
+  display:inline-block;
+  background-color: $green;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size: modular-scale(-1);
+  padding:8px 26px;
+  text-decoration:none;
+  border: none;
 }
