--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -24,10 +24,12 @@ html {
   font-size: 1em;
   padding: 8px 26px;
   text-decoration: none;
-  border: none; }
+  border: none;
+  bottom: 1000px; }
 
 a:link {
-  color: white; }
+  color: white;
+  text-decoration: none; }
 
 h1 {
   font-family: Roboto, sans-serif;
@@ -44,7 +46,7 @@ h2 {
 h3 {
   font-family: Roboto, sans-serif;
   font-size: 1em;
-  font-weight: 400;
+  font-weight: 600;
   color: black; }
 
 h4 {
@@ -55,7 +57,7 @@ h4 {
 
 p {
   font-family: Roboto, sans-serif;
-  font-size: 0.75019em;
+  font-size: 1em;
   font-weight: 400;
   color: black; }
 
@@ -67,6 +69,13 @@ input[type="email"] {
   font-family: sans-serif;
   font-size: 18px;
   box-shadow: none;
-  border-radius: none; }
+  border-radius: none;
+  float: left; }
+
+li {
+  font-family: Roboto, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: black; }
 
 /*# sourceMappingURL=style.css.map */
