--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -30,7 +30,7 @@ a:link {
 }
 h1 {
   font-family: $font;
-  font-size: modular-scale(2);
+  font-size: modular-scale(3);
   font-weight: 500;
   color: gray;
 }
@@ -59,6 +59,7 @@ p {
   color: black;
 }
 input[type="email"] {
+  font-family: $font; 
   display: block;
   margin: 0;
   padding-top: 8px;
@@ -75,7 +76,12 @@ li {
   font-weight: 400;
   color: black;
 }
-
+ul {
+  font-family: $font;
+  font-size: modular-scale(0);
+  font-weight: 400;
+  color: black;
+}
 
 
 
