--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -22,20 +22,28 @@ nav {
 .hero {
   @include span-columns(12); 
 // need help making background size bigger
-  background-image: url("http://www.smashingshowcase.com/wp-content/uploads/2011/12/awesome-anime-hd-wallpapers-by-udonnodu-02.jpg");
+  background-image: url("http://c8.alamy.com/comp/ACEFAG/saddle-tackle-shed-background-low-opacity-bw-ACEFAG.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 
-  p h1 { @include span-columns(12); } 
+  p h1 { @include span-columns(12); 
 
+  } 
+  h1 {color: white;}
   button {
     width: 300px;
   } 
 
   .hero-blurb { 
-    @include outer-container; 
+    @include outer-container;
+    p {
     text-align: center;
+    margin-right: 20%;
+    margin-left: 20%;
+    } 
+
   }
+
 }
 
 .image-blurb { 
