--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -143,7 +143,7 @@ nav {
     display: block;
     margin-right: 2.35765%;
     width: 100%;
-    background-image: url("http://www.smashingshowcase.com/wp-content/uploads/2011/12/awesome-anime-hd-wallpapers-by-udonnodu-02.jpg");
+    background-image: url("http://c8.alamy.com/comp/ACEFAG/saddle-tackle-shed-background-low-opacity-bw-ACEFAG.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%; }
     .hero:last-child {
@@ -155,17 +155,22 @@ nav {
       width: 100%; }
       .hero p h1:last-child {
         margin-right: 0; }
+    .hero h1 {
+      color: white; }
     .hero button {
       width: 300px; }
     .hero .hero-blurb {
       max-width: 68em;
       margin-left: auto;
-      margin-right: auto;
-      text-align: center; }
+      margin-right: auto; }
       .hero .hero-blurb::after {
         clear: both;
         content: "";
         display: table; }
+      .hero .hero-blurb p {
+        text-align: center;
+        margin-right: 20%;
+        margin-left: 20%; }
 
   .image-blurb {
     float: left;
