--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -120,6 +120,35 @@ nav {
     content: ' ';
     display: block; }
 
+.application-steps ol {
+  list-style: none;
+  counter-reset: my-awesome-counter; }
+  .application-steps ol li {
+    margin-left: 10px;
+    padding: 0px;
+    counter-increment: my-awesome-counter;
+    margin-bottom: 10px;
+    border-bottom: 1px solid white;
+    line-height: 22px; }
+    .application-steps ol li h3 {
+      margin: 0;
+      display: inline-block; }
+    .application-steps ol li p {
+      margin-top: 5px;
+      padding-left: 12px; }
+  .application-steps ol li:before {
+    content: counter(my-awesome-counter);
+    line-height: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 12px 0px -35px;
+    width: 35px;
+    text-align: center;
+    border-radius: 1in;
+    border: 1.5px solid #16DDA4;
+    font-weight: 900;
+    background-color: white; }
+
 @media screen and (min-width: 1px) {
   .logo, nav {
     float: left;
