--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -26,17 +26,15 @@ nav {
   background-repeat: no-repeat;
   background-size: 100% 100%;
 
-  p h1 { @include span-columns(12); 
-
-  } 
+  p h1 { @include span-columns(12); } 
   h1 {color: white;}
-  button { width: 300px; } 
 
   .hero-blurb { 
     @include outer-container;
     text-align: center;
     padding-right: 20%;
     padding-left: 20%;
+    padding-bottom: 75px;
   }
 
 }
@@ -80,5 +78,4 @@ h1, h2 {
 footer {
   @include span-columns(12);
   text-align: center;
-
 }
