--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -85,24 +85,40 @@ h1, h2 {
 
 input[type="email"] {
   font-family: $font; 
-  font-size: modular-scale(1);
+  font-size: modular-scale(0);
   display: block;
   margin: 0;
-  padding-top: 8px;
   box-shadow: none;
   border-radius: none;
-  margin-top:4px;
+  padding-top: 5.5px;
+  margin-top: 4.5px;
   margin-left: 30px;
   margin-right: auto;
   width: 200px;
   float: left;
+  padding: 8px;
 }
 
 .short-button {
-  padding: 6.5px 30px;
+  padding: 6.5px 27px;
   margin-right: auto;
   margin-left: -60px;
+  display:inline-block;
+  background-color: $green;
+  cursor:pointer;
+  color:#ffffff;
+  font-family: $font;
+  font-size: modular-scale(1);
+  text-decoration:none;
+  border: none;
+  bottom: 1000px;
+  margin-top: 4.5px; 
+  margin-right: -11px;
 }
+
+
+/*  padding:6.5px 26px;*/
+
 
 footer {
   @include span-columns(12);
