Fixed class long button

--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -1,7 +1,7 @@
 $green: #16DDA4;
 $font: Roboto, sans-serif;
 
-#long-button {
+.long-button {
   display:inline-block;
   background-color: $green;
   cursor:pointer;
