--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -145,8 +145,20 @@ nav {
 section {
   padding: 25px 0;
 }
-
-
+#mc_embed_signup label {
+  display: inline;
+  font-size: modular-scale(0);
+  text-align: center;
+  width: auto;
+}
+#mc_embed_signup input.email {
+  display: block;
+  padding: 8px;
+  text-indent: 5px;
+  width: 58%;
+  min-width: 130px;
+  padding-bottom: 10px;
+}
 
 
 
