Fixing live version

--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -148,13 +148,16 @@ section {
 #mc_embed_signup label {
   display: inline;
   font-size: modular-scale(0);
+  font-family: $font;
   text-align: center;
   width: auto;
+  font-weight: normal;
 }
 #mc_embed_signup input.email {
   display: block;
   padding: 8px;
   text-indent: 5px;
+  margin: 0px 60px 0px;
   width: 58%;
   min-width: 130px;
   padding-bottom: 10px;
