--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -146,8 +146,7 @@ section {
   padding: 25px 0;
 }
 
-#input-box {
-  #mc_embed_signup input.email {
+  /*#mc_embed_signup #input-box input.email {
     display: block;
     padding: 8px;
     text-indent: 5px;
@@ -155,10 +154,10 @@ section {
     width: 58%;
     min-width: 130px;
     padding-bottom: 10px;
-  }
-}
+  }*/
+
 #mc_embed_signup label {
-  display: block!important;
+  display: block;
   font-size: modular-scale(0);
   font-family: $font;
   text-align: center;
