--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -133,17 +133,17 @@ nav {
 section {
   padding: 25px 0; }
 
-#input-box #mc_embed_signup input.email {
+/*#mc_embed_signup #input-box input.email {
   display: block;
   padding: 8px;
   text-indent: 5px;
   margin: 0px 60px 0px;
   width: 58%;
   min-width: 130px;
-  padding-bottom: 10px; }
-
+  padding-bottom: 10px;
+}*/
 #mc_embed_signup label {
-  display: block !important;
+  display: block;
   font-size: 1em;
   font-family: Roboto, sans-serif;
   text-align: center;
@@ -271,7 +271,7 @@ section {
     .timeline:last-child {
       margin-right: 0; }
 
-  input[type="email"] {
+  #mc_embed_signup #input-box input[type="email"] {
     font-family: Roboto, sans-serif;
     font-size: 1em;
     display: block;
@@ -375,7 +375,7 @@ section {
     .application-steps:last-child {
       margin-right: 0; }
 
-  input[type="email"] {
+  #mc_embed_signup #input-box input[type="email"] {
     font-family: Roboto, sans-serif;
     font-size: 1em;
     display: block;
