--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -156,7 +156,7 @@ section {
     padding-bottom: 10px;
   }*/
 
-#mc_embed_signup label {
+.mail-signup #mc_embed_signup label {
   display: block;
   font-size: modular-scale(0);
   font-family: $font;
