--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -26,7 +26,8 @@ section.curriculum .image-blurb {
 .application-steps {
   @include span-columns(6);  
 }
-#mc_embed_signup #input-box input[type="email"] {
+
+.mail-signup #mc_embed_signup #input-box input[type="email"] {
   font-family: $font; 
   font-size: modular-scale(0);
   display: block;
