--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -133,16 +133,7 @@ nav {
 section {
   padding: 25px 0; }
 
-/*#mc_embed_signup #input-box input.email {
-  display: block;
-  padding: 8px;
-  text-indent: 5px;
-  margin: 0px 60px 0px;
-  width: 58%;
-  min-width: 130px;
-  padding-bottom: 10px;
-}*/
-.mail-signup #mc_embed_signup label {
+.mail-signup #mc_embed_signup #mc_embed_signup_scroll label {
   display: block;
   font-size: 1em;
   font-family: Roboto, sans-serif;
