--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -145,7 +145,7 @@ nav {
 section {
   padding: 25px 0;
 }
-.mail-signup #mc_embed_signup #mc_embed_signup_scroll label {
+.mail-signup #mc_embed_signup #mc_embed_signup_scroll label[for=mce-EMAIL] {
   display: block;
   font-size: modular-scale(0);
   font-family: $font;
