--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -4,6 +4,7 @@
 
 @media screen and (min-width: 1px) {
   @import "layout_1px";
+  @import "nav_1px.scss"
 }
 
 @media only screen and (min-width: 641px) {
