--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -33,9 +33,11 @@ section.curriculum .image-blurb {
   display: block;
   margin: 0;
   padding-top: 6.5px;
+  padding-bottom: 10px;
   width: 60%;
   box-shadow: none;
   border-radius: none;
+  border: none;
   float: left;
   margin-top:4px;
   margin-left: 160px;
@@ -49,6 +51,7 @@ section.curriculum .image-blurb {
   font-family: 100% $font;
   font-size: modular-scale(1);
   padding:6.5px 26px;
+  padding-bottom: 4px;
   text-decoration:none;
   border: none;
   bottom: 1000px;
