--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -42,6 +42,7 @@ section.curriculum .image-blurb {
   margin-left: 160px;
   margin-right: auto;
   webkit-appearance: none;
+  border: 1px solid #999; 
 }
 .short-button {
   display:inline-block;
